<resources>
    <string name="app_name">BankingApp</string>
    <string name="title_overview">Overview</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="account_number">account number</string>
    <string name="amount">amount</string>
    <string name="send_money">Send Money</string>
    <string name="log_out">Log Out</string>
    <string name="new_password">new password</string>
    <string name="change_password">Change Password</string>
    <string name="transactions">Transactions:</string>
    <string name="re_authenticate">Re-authenticate</string>
    <string name="create_account">Create Account</string>
</resources>