<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_settings"
    app:startDestination="@+id/overview_home">

    <fragment
        android:id="@+id/overview_home"
        android:name="com.example.vulnerablebankingapp.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.vulnerablebankingapp.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction_check_password" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.vulnerablebankingapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>